# auv_tracker

./: .gitignore  MANIFEST.in  pyproject.toml
Testing/: testing.py
auv_tracker/: __init__.py  core.py  server.py
auv_tracker/static/: index.html
